force-app/main/default/objects/Master_Solution__c/Master_Solution__c.object-meta.xml
<CustomObject>
    <label>Master Solution</label>
    <nameField>
        <label>Master Solution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Solution</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>