force-app/main/default/objects/Master_Solution__c/fields/EOPDate__c.field-meta.xml
<CustomField>
    <fullName>EOPDate__c</fullName>
    <description>EOP (End Of Production) Date</description>
    <label>EOP Date</label>
    <type>Date</type>
</CustomField>