force-app/main/default/objects/Master_Solution__c/fields/EOSDate__c.field-meta.xml
<CustomField>
    <fullName>EOSDate__c</fullName>
    <description>EOS (End Of Service) Date</description>
    <label>EOS Date</label>
    <type>Date</type>
</CustomField>