force-app/main/default/objects/Master_Solution__c/fields/intensivetype__c.field-meta.xml
<CustomField>
    <fullName>intensivetype__c</fullName>
    <label>Intensivetype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSP</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>