force-app/main/default/objects/Master_Solution__c/fields/LODDate__c.field-meta.xml
<CustomField>
    <fullName>LODDate__c</fullName>
    <description>LOD (Last Order) Date</description>
    <label>LOD Date</label>
    <type>Date</type>
</CustomField>