force-app/main/default/objects/Master_Solution__c/fields/PLCStatus__c.field-meta.xml
<CustomField>
    <fullName>PLCStatus__c</fullName>
    <description>PLC Status</description>
    <label>PLC Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>New</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>Available for Sales</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Discontinued for Sales</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>End of Sales</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Planned</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Registered for Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>