force-app/main/default/objects/Master_Solution__c/fields/PLManagementLevel__c.field-meta.xml
<CustomField>
    <fullName>PLManagementLevel__c</fullName>
    <label>P/L Management Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>