force-app/main/default/objects/Master_Solution__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product</description>
    <label>Product</label>
    <type>Checkbox</type>
</CustomField>