force-app/main/default/objects/Master_Solution__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>서비스</description>
    <label>Service</label>
    <referenceTo>Master_Service__c</referenceTo>
    <relationshipName>Solution</relationshipName>
    <type>Lookup</type>
</CustomField>