force-app/main/default/objects/Master_Solution__c/fields/SolutionDepartment__c.field-meta.xml
<CustomField>
    <fullName>SolutionDepartment__c</fullName>
    <description>솔루션 부서 명</description>
    <label>Solution Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>