force-app/main/default/objects/Master_Solution__c/fields/SolutionDepartmentCode__c.field-meta.xml
<CustomField>
    <fullName>SolutionDepartmentCode__c</fullName>
    <description>솔루션 부서 코드</description>
    <label>Solution Department Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>