force-app/main/default/objects/Master_Solution__c/fields/SolutionManageName__c.field-meta.xml
<CustomField>
    <fullName>SolutionManageName__c</fullName>
    <description>솔루션 매니저 이름</description>
    <label>Solution Manage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>