force-app/main/default/objects/Master_Solution__c/fields/SolutionManagerNo__c.field-meta.xml
<CustomField>
    <fullName>SolutionManagerNo__c</fullName>
    <description>솔루션 매니저 사번</description>
    <label>Solution Manager No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>