force-app/main/default/objects/Master_Solution__c/fields/SolutionType__c.field-meta.xml
<CustomField>
    <fullName>SolutionType__c</fullName>
    <label>Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Professional Service</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>H/W</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>S/W</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Infra</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>BPO</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>SaaS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>